--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coleta Seletiva</title>
-   <link rel="stylesheet" type="text/css" href="styles.css"> 
+   <link rel="stylesheet" type="text/css" href="desing.css">
     <script src="script.js"></script>
 </head>
 <body>
