--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ A produção de papel também requer muitos recursos. Para produzir 1 tonelada d
 
 E as embalagens mistas, feitas de plástico e metal, metal e vidro e papel e metal? Nas compras, prefira embalagens mais simples. Mas, se não tiver opção, desmonte-a separando as partes de metal, plástico e vidro e deposite-as nos coletores apropriados.</p>
  
-    <footer>
-        <p>Trabalho Uninter</p>
-        <p>Coleta Seletiva</p>
+     <footer>
+        <p>Trabalho Uninter  Coleta Seletiva</p>
+        
     </footer>
 
 </body>
